tolk-tester/tests/invalid-typing/err-6600.tolk
fun failExplicitCastIncompatible(c: cell) {
    return c as slice;
}

/**
@compilation_should_fail
@stderr type `cell` can not be cast to `slice`
 */
